# comet-mcp-desktop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  comet_mcp.py  content_filter.py  main.py  pyproject.toml  requirements.txt  setup.sh  test_comet.py
docs/: configuration.md  security.md  tool-reference.md
