[project]
name = "comet-mcp-desktop"
version = "0.1.0"
description = "MCP server connecting Claude Desktop/Code to Perplexity's Comet browser via Chrome DevTools Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Adil Shaikh" },
]
keywords = ["mcp", "comet", "perplexity", "claude", "browser", "cdp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
]

[project.scripts]
comet-mcp-desktop = "comet_mcp:main"

[project.urls]
Homepage = "https://github.com/AdilShaikh1/comet-mcp-desktop"
Repository = "https://github.com/AdilShaikh1/comet-mcp-desktop"
Issues = "https://github.com/AdilShaikh1/comet-mcp-desktop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["comet_mcp.py", "content_filter.py"]

[tool.hatch.build.targets.sdist]
only-include = ["comet_mcp.py", "content_filter.py", "pyproject.toml", "README.md"]
